--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             貴方(プレイヤー)は男性4人組バンド<br>
             (仮)、”HARUMAKI”のファンだ。今日は近頃の感染症の<br>
             影響でオンラインになったライブが行われる。<br>
-            開始1時間前になってソワソワしながらSNSを巡回していた貴方は、ふとメンバーのツイートを発見する。そこには”気が付いたら見知らぬ駅にいた。<br>
+            開始1時間前になってソワソワしながらSNSを巡回していた貴方は、ふとメンバーのツイートを発見する。そこには気が付いたら見知らぬ駅にいた。<br>
             このままではライブが出来ない。助けてほしい。”と書かれていた。<br>
             待ちに待ったライブを開催するためにも、彼らを助け出さなければ_＿！</p>
           <div class="story__note__outer bg-color--gray">
