--- a/hint3.html
+++ b/hint3.html
@@ -23,7 +23,8 @@
   </header>
   <main class="main hint-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/ろせず.png" alt="封鎖された家庭科室からの脱出"></h1>
+    <h1 class="main-title"><img src="assets/images/ろせず.png" alt=""></h1>
+    <h1 class="main-title"><img src="assets/images/謎.png"
     <!-- タイトルエリア　ここまで -->
     <section class="section">
       <div class="container">
