--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
         <div class="story">
           <p class="text-center">20XX年<br>
             貴方(プレイヤー)は男性4人組バンド<br>
-            (仮)、”HARUMAKI”のファンだ。今日は近頃の感染症の<br>
-            影響でオンラインになったライブが行われる。<br>
+            ”HARUMAKI”のファンだ。<br>
+            今日は近頃の感染症の影響でオンラインになったライブが行われる。<br>
             開始1時間前になってソワソワしながらSNSを巡回していた貴方は、ふとメンバーのツイートを発見する。<br>
             そこには気が付いたら見知らぬ駅にいた。<br>
             このままではライブが出来ない。助けてほしい。”と書かれていた。<br>
             待ちに待ったライブを開催するためにも、彼らを助け出さなければ_＿！</p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
-              <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
-              <li>30分を超えるとS先生は出てこられない</li>
+              <li>1時間以内に助けないとライブを行うことができない</li>
+              <li></li>
             </ul>
           </div>
-          <p class="text-center">いつの間にか、タイマーが起動した。29:58、29:57・・・急がなきゃ。<br>
+          <p class="text-center">いつの間にか、タイマーが起動した。59:58、59:57・・・急がなきゃ。<br>
             まずはこの暗号を解かなくては！</p>
         </div>
       </div>
