--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>封鎖された家庭科室からの脱出 │ Project N</title>
+  <title>異界駅からのSOS脱出 │ Project N</title>
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -107,8 +107,8 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
-              <p class="text-center">家庭科室に入ることができた！<br>
-                すぐに目に入ったのは黒板にある４つの謎。<br>
+              <p class="text-center">何か運転方法が書いてあるものはないかと駅長室に行くと、そこには電車運転マニュアルが！…でも、<br>
+                マニュアルにはいろいろな運行方法がある。どれを選べばいいんだ？<br>
                 これらを解くことで、きっと次のステップに繋がるはずだ！</p>
             </div>
           </div>
@@ -181,7 +181,8 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：2　クリア！</div>
-              <div class="clear-message__content">黒板の指示に従い、<br>
+              <div class="clear-message__content">無事に運行方法がわかった！…しかし、電車のエンジンがかからない。<br>
+                機器を調べてみると、どうやら電車を動かすための鍵が刺さってないようだ。<br>
                 次のステージの謎を解こう！</div>
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
@@ -198,11 +199,12 @@ Youtube貼り付けここまで -->
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
-            <p class="text-center">黒板から得たメッセージは、「食物の廃棄問題」だった。<br>
-              どうやら、廃棄にかかる費用がかかりすぎて小学校の運営が厳しくなったようだ。。<br>
+            <p class="text-center">周りを調べていると運転席の壁に謎があったぞ！しかも血文字だ！怖い！<br>
+              これを解かないとどうやら行き先がわからないようだ。頑張ろう。<br>
               これらを解決するための最後の謎を解いていこう！</p>
             <figure class="image__container">
-              <img src="assets/images/stage.png" alt="">
+              <img src="assets/images/謎.png" alt="">
+              <img src="assets/images/ろせず.png" alt="">
             </figure>
           </div>
         </section>
