--- a/hint3.html
+++ b/hint3.html
@@ -43,7 +43,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">テキストテキストテキストテキストテキスト</p>
+              <p class="card__content">三角は数字の3</p>
             </div>
               
  <!-- 3-2ヒント追加
@@ -64,7 +64,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">えええ</p>
+              <p class="card__content">つきのみや</p>
             </div>
 
  <!-- 3-2答え追加
