--- a/hint3.html
+++ b/hint3.html
@@ -17,14 +17,13 @@
   </svg>
   <header class="header">
     <div class="container">
-      <div class="header__logo"><img src="assets/images/logo.svg" alt="チームロゴ"></div>
+      <div class="header__logo"><img src="assets/images/ロゴ.png" alt="チームロゴ"></div>
       <div class="header__name">N・S高生制作サイト</div>
     </div>
   </header>
   <main class="main hint-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/ろせず.png" alt=""></h1>
-    <h1 class="main-title"><img src="assets/images/謎.png"
+    <h1 class="main-title"><img src="assets/images/トプ画.png" alt=""></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section">
       <div class="container">
