--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
               <li>1時間以内に助けないとライブを行うことができない</li>
-              <li></li>
+              <li>謎は合計で3問ある、しっかりと解いていこう</li>
             </ul>
           </div>
           <p class="text-center">いつの間にか、タイマーが起動した。59:58、59:57・・・急がなきゃ。<br>
