--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
                 ただ、離れたところにいる仲間と同じ会場で謎解きをしている気持ちになれるので、カメラをオンにしてみんなでわいわいプレイをすることをお勧めします。</p>
             </div>
           </div>
+          <div class="column">
+            <div class="card">
+              <h3 class="card__title">謎を共有しよう！</h3>
+              <p class="card__content">LINEや画面共有などで同じ謎を共有して考えあおう！<br>
+                誰かがサイトを開けなくなってしまった時など、世界観に没入できなくなってしまうかもしれません。<br>
+                画面共有でみんなで同じ画面を見ると楽しく遊べるかもしれません</p>
             </div>
           </div>
           <div class="column">
