--- a/final.html
+++ b/final.html
@@ -45,9 +45,9 @@ Youtube貼り付けここまで-->
       </div>
          -->
         <p class="text-center">あなたはきっと、このメッセージをずっと忘れることはないだろう・・・。<br>
-          これからも家庭科室が封鎖されるようなことがあったら、<br>
-          この教訓をしっかり思い出してくれ。</p>
-        <p class="text-center">それでは、また会おう！</p>
+          皆さんのおかげで無事に帰還できました！今からライブ会場に向かいます。<br>
+          待っててね！”数多くのフォロワーの協力もあり、メンバーは無事に現世に帰ってくることができた。</p>
+        <p class="text-center">予定通りにライブは行われ、充実した一晩を過ごすことができた！ハッピーだ。</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
@@ -65,8 +65,9 @@ Youtube貼り付けここまで-->
             <div class="card">
               <h3 class="card__title">このゲームの企画者</h3>
               <p class="card__content">企画・制作メンバーの紹介など。<br>
-                テキストテキストテキストテキストテキストテキストテキスト<br>
-                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                サイト作成者　青木紬麦<br>
+                謎作成者　今井桜、中村　美優、竹内　珊瑚</p>
+              　　　デザイン作成者　大和　侑矢、秋田　琴音</p>
             </div>
           </div>
         </div>
