--- a/final.html
+++ b/final.html
@@ -66,8 +66,7 @@ Youtube貼り付けここまで-->
               <h3 class="card__title">このゲームの企画者</h3>
               <p class="card__content">企画・制作メンバーの紹介など。<br>
                 サイト作成者　青木紬麦<br>
-                謎作成者　今井桜、中村　美優、竹内　珊瑚</p>
-              　　　デザイン作成者　大和　侑矢、秋田　琴音</p>
+                謎作成者　今井桜、中村　美優、竹内　珊瑚 デザイン作成者　大和　侑矢、秋田　琴音</p>
             </div>
           </div>
         </div>
