--- a/final.html
+++ b/final.html
@@ -41,9 +41,9 @@
               </div>
             </div>
 Youtube貼り付けここまで-->
-          ß
+          //ß
       </div>
-         -->
+         //-->
         <p class="text-center">あなたはきっと、このメッセージをずっと忘れることはないだろう・・・。<br>
           皆さんのおかげで無事に帰還できました！今からライブ会場に向かいます。<br>
           待っててね！”数多くのフォロワーの協力もあり、メンバーは無事に現世に帰ってくることができた。</p>
@@ -66,7 +66,8 @@ Youtube貼り付けここまで-->
               <h3 class="card__title">このゲームの企画者</h3>
               <p class="card__content">企画・制作メンバーの紹介など。<br>
                 サイト作成者　青木 紬麦<br>
-                謎作成者　今井 桜、中村　美優、竹内　珊瑚 </p>デザイン作成者　大和　侑矢、秋田　琴音</p>
+                謎作成者　今井 桜、中村　美優、竹内　珊瑚 </p>
+                デザイン作成者　大和　侑矢、秋田　琴音</p>
             </div>
           </div>
         </div>
