--- a/main.html
+++ b/main.html
@@ -110,6 +110,7 @@ Youtube貼り付けここまで -->
               <p class="text-center">何か運転方法が書いてあるものはないかと駅長室に行くと、そこには電車運転マニュアルが！…でも、<br>
                 マニュアルにはいろいろな運行方法がある。どれを選べばいいんだ？<br>
                 これらを解くことで、きっと次のステップに繋がるはずだ！</p>
+              <img src="assets/images/謎3.png" alt="">
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
@@ -130,7 +131,7 @@ Youtube貼り付けここまで -->
                 <div class="column">
                   <!-- STAGE2-1問題セクション　ここから -->
                   <figure class="image__container">
-                    <img src="assets/images/謎3.png" alt="">
+                    <img src="assets/images/stage.png" alt="">
                   </figure>
                   <!-- STAGE2-1問題セクション　ここまで -->
                   <!-- STAGE2-1解答入力セクション　ここから -->
