--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
         <!-- STAGE1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>脱出手段を見つけよう</h2>
             <p class="text-center">まずは、ここから脱出する手段を探さないと。<br>
               下の画像の謎を解き、答えを導き出そう。</p>
             <p class="text-center">困ったときは、ヒントがあるよ。なるべく見ないようにゲームを進めていこう。</p>
@@ -106,7 +106,7 @@ Youtube貼り付けここまで -->
         <section>
           <div class="section">
             <div class="container">
-              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
+              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>どの電車に乗ればいいの？</h2>
               <p class="text-center">何か運転方法が書いてあるものはないかと駅長室に行くと、そこには電車運転マニュアルが！…でも、<br>
                 マニュアルにはいろいろな運行方法がある。どれを選べばいいんだ？<br>
                 これらを解くことで、きっと次のステップに繋がるはずだ！</p>
@@ -199,7 +199,7 @@ Youtube貼り付けここまで -->
         <!-- STAGE3-1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>電車に乗るための切符を買う</h2>
             <p class="text-center">周りを調べていると運転席の壁に謎があったぞ！しかも血文字だ！怖い！<br>
               これを解かないとどうやら行き先がわからないようだ。頑張ろう。<br>
               これらを解決するための最後の謎を解いていこう！</p>
